SortCompetition with ArrayList